static/base.css
body {
    font-family: "Inter"; /*sans-serif*/
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-variation-settings: "slnt" 0;

    /* Default background color - slightly off white */
    background-color: #F7F7F7;

    /* Default text color - slightly off black */
    color: #222222;
}

.rmr-navbar {
    background-color: #007bff;
    border-bottom: 2px solid darkgray;
    padding: 0px 20px;
    overflow: hidden;
}

.nav-element {
    display: inline-block;
    color: #e2e2e2;
    padding: 10px 10px 10px 10px;
    height: 100%;
    text-decoration-line: none !important;
}

.nav-element:hover {
    /* background-color: white; */
    color: white;
}

.nav-element-right {
    float: right;
}

.rmr-navbar .icon {
    display: none;
}

/* When the screen is less than 600 pixels wide, hide all links, except for the first one. Show the link that contains should open and close the topnav (.icon) */
@media screen and (max-width: 600px) {
  .rmr-navbar a:not(:first-child) {display: none;}
  .rmr-navbar a.icon {
    float: right;
    display: block;
  }
}

/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
@media screen and (max-width: 600px) {
  .rmr-navbar.responsive {position: relative;}
  .rmr-navbar.responsive a.icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .rmr-navbar.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}

.content {
    /* Don't let page elements get too close to navbar, don't let elements get too close to the sides. */
    margin: 20px 10% 0px 10%;
}

.page-header {
    font-size: 35px;
    font-weight: bold;
    margin-bottom: 20px;
    margin-top: 35px;
}

.sub-header {
    font-size: 25px;
    border-bottom: 1px solid #cccdcf;
    margin-top: 35px;
    margin-bottom: 20px;
}

/* This will be the universal table for the site */
.table-container {
    width: 100%;
    display: flex;
    justify-content: center;

}

.table-container > table {
    width: 80%;
}

.table-container th, td {
    border-bottom: 1px solid rgb(205, 205, 205);
}

.blue-btn {
    background-color: #007bff;
    color:#F7F7F7;
    /* Override default border-width */
    border-width: 0px;
    border-radius: 5px;
}

.blue-btn:hover {
    background-color: #016ada;
}

.darkblue-btn {
    background-color: #0066d3;
    color: white;
    padding: 5px 15px;
    border-radius: 20px;
}

.darkblue-btn:hover {
    background-color: #005abb;
}

/* <a> elements and <button> elements are styled a little differently by default, so here we fix those differences */
a.darkblue-btn {
    color: white;
    text-decoration: none;
}

a.darkblue-btn:hover {
    color: white;
    text-decoration: none;
}

button.darkblue-btn {
    /* Override default */
    border-width: 0px;
}

a.darkblue-btn,
button.darkblue-btn {
    font: 400 16px Arial !important; /* Fixes bug where <a> and <button> are different heights */
}

/* For forms */
.error-msg {
    color: red;
}
.required-text {
    color: red;
    font-style: italic;
}

.username-link {
    color: inherit;
    text-decoration: none;
}
.username-link:hover {
    color: inherit;
    text-decoration: underline;
}

.popup-msg {
    position: fixed;
    top: 75px; /* Adjust as needed */
    /* left: 20px; Adjust as needed */
    background-color: rgb(94, 222, 111); /* Background color */
    padding: 10px; /* Padding around the text */
    border: 1px solid #ccc; /* Border */
    border-radius: 5px; /* Rounded corners */
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Shadow */
    z-index: 999; /* Ensure the box appears above other content */
    animation: slideIn 0.5s forwards;
}

@keyframes slideIn {
    from {
        left: -300px; /* Initial position off the screen */
    }
    to {
        left: 20px; /* Final position at top left */
    }
}

.close-btn {
    /* position button top right corner of its parent div */
    position: absolute;
    top: -5px;
    right: 3px;

    cursor: pointer;
}

.resume-card-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 10px 0px;
}

.resume-card {
    padding: 5px;
    border: 1px solid #cccdcf;
    border-radius: 5px;
    box-shadow: 0 0 3px #ccc;
    position: relative; /* Enables rated checkmark to have absolute position */
    flex-basis: calc(33.33% - 10px);
    height: 300px; /* Give all cards a consistent height */
    margin-bottom: 10px;
    background-color: white;
    transition: transform 0.2s;

}

.resume-card:hover {
    cursor: pointer;
    transform: scale(1.05);
}

/* Media query for smaller viewports */
@media screen and (max-width: 1200px) {
    .resume-card {
      flex-basis: calc(50% - 10px); /* Width is half of the container minus margin */
    }
  }

  /* Media query for even smaller viewports */
  @media screen and (max-width: 600px) {
    .resume-card {
      flex-basis: calc(100% - 10px); /* Width is 100% of the container minus margin */
    }
  }

.resume-image-skeleton {
    height: 200px;
    overflow: hidden; /* Do not let image expand out of its container */
    background-color:#cccdcf;
    border-radius: 5px;
    animation: loading 0.75s infinite alternate;
}

@keyframes loading {
    0% {
        opacity: 0.5;
    }
    100% {
        opacity: 1;
    }
}

.resume-card-name {
    font-weight: bold;
    font-size: 18px;
}

.resume-card-name,
.resume-card-text {
    margin: 0px 5px;
}

.resume-card-rated-checkmark {
    position:absolute;
    top: 5%;
    right: 5%;
}

.group-card {
    padding: 10px;
    border: 1px solid #cccdcf;
    border-radius: 5px;
    box-shadow: 0 0 3px #ccc;
    background-color: white;
    margin-bottom: 30px;
}

.group-card:hover {
    cursor: pointer;
    background-color: rgb(240, 240, 240);
}

.group-card-name {
    font-weight: bold;
    font-size: 18px;
}

.card-subheader {
    color: #464646;
}

.page-description {
    font-size: 20px;
    margin-bottom: 20px;
}

